--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=TypeScript
-**/*.json linguist-language=jsonc
-* -text
+*.ts linguist-language=TypeScript
+*.tsx linguist-language=TypeScript
+*.ts build
